# libelfpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
examples/: readelfpp.cpp  simple_example.cpp  tinyformat.h
include/libelfpp/: endianutil.h  fileheader.h  libelfpp.h  section.h  segment.h
src/: libelfpp.cpp  private_impl.cpp  private_impl.h
test/: catch.h  main.cpp
test/test_programs/: example_lib.cpp  example_lib.h  fibonacci  fibonacci.cpp  hello_world  hello_world.cpp
